v3/src/components/common/edit-formula-modal.scss
@use "../vars";

.codap-modal-content {
  min-height: 180px;
  min-width: 400px;

  .formula-modal-body {
    cursor: default;
    display: flex;
    flex-direction: column;
    height: inherit;
    margin-bottom: 10px;
    min-height: 72px;
    min-width: 400px;

    .formula-form-control {
      display: flex;
      flex-grow: 1;
      align-items: flex-start;

      .title-label {
        width: 140px;
      }
      input {
        max-width: 270px;
        margin-right: 3px;
        margin-left: 0
      }
      .formula-editor-container {
        display: flex;
        height: 100%;
        width: 100%;

        .formula-editor-input {
          height: 100%;
          width: 100%;
          flex-grow: 1;
          .cm-editor {
            height: 100%;
            width: 100%;
          }
        }
      }

    }

    .formula-insert-buttons-container {
      position: relative;
      bottom: 0;

      .formula-editor-button {
        padding: 0 10px;
        &:hover {
          background: vars.$codap-teal-lighter;
        }
        &:active, &.menu-open {
          background: vars.$codap-teal-light;
          color: white;
        }
        &.insert-value {
          margin-left: 0;
        }
      }
    }
  }

  .formula-modal-footer {
    cursor: default;
    border-radius: 6px;
    position: relative;
    bottom: 0;
    right: 0;
  }

  .codap-modal-corner {
    position: absolute;
    bottom: 0px;
    right: 0;
    height: 22px;
    width: 22px;
    cursor: se-resize;
  }
  .component-resize-handle {
    fill: #d3d3d3;
    &:hover {
      fill: white;
    }
  }
}

